fix filters button clipping

--- a/app/components/Button/Button.scss
+++ b/app/components/Button/Button.scss
@@ -115,6 +115,17 @@
       margin-left: -12px; // Half of spinner width (24px)
     }
   }
+
+  &.small {
+    padding: $spacing-small $spacing-unit;
+    height: 40px;
+    font-size: $font-size-small;
+    white-space: nowrap;
+
+    &.loading {
+      min-height: 40px;
+    }
+  }
 }
 
 .button-loading-spinner {
